<resources>
    <string name="app_name">WMS</string>
    <string name="caigou_ruku">采购入库</string>
    <string name="mendian_ruku">门店入库</string>
    <string name="kucun_pandian">库存盘点</string>
    <string name="yiwei_caozuo">移位操作</string>
    <string name="shangpin_chaxun">商品信息查询</string>
    <string name="goods_not_found">没找查找到相关商品</string>
    <string name="search_tip">请输入商品相关信息查询或者扫描二位码,enter键开始搜索</string>
    <string name="tip">提示</string>
    <string name="net_error">网络或者服务器错误！</string>
    <string name="create_time">创建时间:%s</string>
    <string name="end_time">完成时间:%s</string>
    <string name="check_id">盘点单号:%s</string>
    <string name="type">类型：%s</string>
    <string name="status">状态：%s</string>
    <string name="sponsor">发起人:%s</string>
    <string name="operator">操作人：%s</string>
    <string name="dai_pandian">待盘点数：%d</string>
    <string name="yipandian">已盘点数：%d</string>
    <string name="start">开始盘点</string>
    <string name="now_pandian">当前盘点人员：%s</string>
    <string name="please_check">请扫SKU码</string>
    <string name="ru_ku_code">入库单编号:%s</string>
    <string name="ru_ku_type">入库类型：%s</string>
    <string name="ru_ku_status">状态：%s</string>
    <string name="ru_ku_count">预期入库数：%s</string>
    <string name="ru_ku_count_now">实际入库数：%s</string>
    <string name="scan_ru_ku">扫码入库</string>
    <string name="ru_ku_details">入库详情</string>
    <string name="cao_zuo_ren">操作人：%s</string>
    <string name="ruku">入库</string>
    <string name="chuku">出库</string>
    <string name="scan_zone">扫码区</string>
    <string name="ruku_success">入库成功</string>
    <string name="check_success">盘点成功</string>
    <string name="chu_ku_code">出库单编号:%s</string>
    <string name="chu_ku_type">出库类型：%s</string>
    <string name="chu_ku_count">预期出库数：%s</string>
    <string name="chu_ku_count_now">实际出库数：%s</string>
    <string name="chuku_success">出库成功</string>
    <string name="scan_chu_ku">扫码出库</string>
    <string name="displacement">移位操作</string>
    <string name="old_location">源库位</string>
    <string name="goods">商品</string>
    <string name="new_location">目标库位</string>
    <string name="submit">提交</string>
    <string name="move_success">移库成功</string>
    <string name="clear">清空</string>
</resources>
